# llm-interactive-proxy

./: .coverage  .dependency_check_cache  .git.bak  .gitattributes  .gitignore  .pre-commit-config.yaml  =0.24.0  AGENTS.md  API_KEY_REDACTION_TODO.md  ARCHITECTURAL_ENFORCEMENT_GUIDE.md  ARCHITECTURAL_IMPROVEMENT_CONSISTENT_RETURN_TYPES.md  ARCHITECTURE_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CLINE_TOOL_CALL_SOLUTION.md  CONTRIBUTING.md  CURRENT_PROMPT.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  FULL_MIGRATION_COMPLETE.md  GEMINI.md  IMPLEMENTATION_STATUS.md  MIGRATION_REALITY_CHECK.md  MIGRATION_STATUS_FINAL.md  PERFORMANCE_TRACKING_SUMMARY.md  PRIORITIZED_FAILURE_CATEGORIES.md  PROGRESS_UPDATE.md  PYTEST_FIXES_SUMMARY.md  QWEN.md  README.md  REFACTORING_SUMMARY.md  REMAINING_RETURN_TYPE_ISSUES_ANALYSIS.md  RETURN_TYPE_IMPROVEMENTS_SUMMARY.md  RETURN_TYPE_IMPROVEMENT_FINAL_SUMMARY.md  ROADBLOCK_FIX_SUMMARY.md  ROADMAP.md  SOLID_VIOLATIONS_FIXES_SUMMARY.md  SOLUTION_SUMMARY.md  STAGED_ARCHITECTURE_COMPLETE.md  TODO_ARCHITECTURE_TASKS.md  (+76 more)
.claude/: settings.local.json
.code-search-mcp-server/: status.md  task.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: architecture-check.yml  ci.yml
.kiro/steering/: activate-venv.md  (+2 more)
.pre-commit-hooks/: architectural-check.py
.python_qa_mcp_server/: status.md  task.md
conf/: edit_precision_patterns.yaml
config/: config.example.yaml  edit_precision_model_temperatures.yaml  edit_precision_patterns.yaml  gemini-batch-test.json  gemini-roundrobin.json  qwen_backend.example.yaml  reasoning_aliases.yaml.example  sample-reasoning-config.json  sample.env  tool_call_reactor_config.json  tool_call_reactor_config.yaml
data/: accounting.sqlite  cli_flag_snapshot.txt  sqlite_migration_cache.json
dev/: ARCHITECTURE_IMPROVEMENTS.md  ISSUES.md  SOLID_implementation_summary.md  adapter_removal_plan.md  adapter_verification.md  analysis.md  anthropic_error.txt  complete_solid_migration_plan.md  constants_remaining.txt  cursor_investigating_tool_call_issues_w.md  debug_models.py  demo_batch_backend.py  demo_real_batch.py  example_config.json  final_verification_report.md  fix_highest_priority_problems.md  full_test_results.txt  full_test_results_after_auth_anthropic.txt  full_test_results_after_patch.txt  http_status_constants_complete.md  http_status_constants_final_status.md  http_status_constants_integration_summary.md  hybrid_controller_verification.md  inspect_state.py  interrupted_session.txt  issues.txt  legacy_adapters_inventory.md  legacy_cleanup_complete.md  legacy_cleanup_plan.md  legacy_code_removal_plan.md  milestone_refactoring_effort.md  milsestone.session_snapshot.txt  performance_optimization_completed.md  phase1_http_status_constants_summary.md  refactoring_status.md  refactoring_status_consolidated.md  refactoring_summary.md  remaining_roadblocks.txt  run_claude_pr_loop.sh  run_uvicorn_smoke.py  (+20 more)
docs/: ANTHROPIC.md  API_REFERENCE.md  API_REFERENCE.md.new  APPLICATION_FACTORY_API.md  ARCHITECTURE.md  ARCHITECTURE.md.new  ARCHITECTURE_GUIDE.md  COMMAND_DI_ARCHITECTURE.md  COMMAND_DI_IMPLEMENTATION_FIXES.md  COMMAND_DI_IMPLEMENTATION_SUMMARY.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.md.new  DEVELOPMENT.md  DI_COMMAND_IMPLEMENTATION_FIXES.md  DI_COMMAND_IMPLEMENTATION_SUMMARY.md  DI_CONTAINER_FIXES.md  DI_CONTAINER_USAGE.md  DI_ENFORCEMENT_PATTERNS.md  DI_ENFORCEMENT_SUMMARY.md  DI_FIXES_SUMMARY.md  DI_FIXES_SUMMARY_FINAL.md  FAILOVER_ROUTES.md  FINAL_TEST_RECOMMENDATIONS.md  IMPROVED_APPLICATION_FACTORY.md  LEGACY_MODULES_CROSSWALK.md  MIGRATION_GUIDE.md  NEW_ARCHITECTURE.md  QWEN_OAUTH_GUIDE.md  REMAINING_ISSUES.md  REVIEW.md  SOLID_PRINCIPLES_REVIEW.md  STRUCTURE.md  TEST_DI_ARCHITECTURE.md  TEST_SUITE_OPTIMIZATION.md  TEST_SUITE_STATUS.md  TOOL_CALL_LOOP_DETECTION.md  TROUBLESHOOTING.md  anthropic_api_compatibility.md  architectural_improvements_summary.md  (+18 more)
examples/: anthropic_api_usage.py  gemini_api_usage.py  gemini_batch_client.py  http_status_constants_usage.py
inventory/: legacy_mapping.md
json_repair/: __init__.py
patches/: 0001_add_interface_shims.patch  0002_replace_interface_shims.patch  0003_add_service_shims.patch  0004_add_service_copies.patch  0005_add_remaining_service_shims.patch
pytz/: __init__.py
scripts/: analyze_cline_tool_calls.py  architectural_linter.py  ci_guard_legacy_bridge.py  cline_tool_call_debug.py  find_app_state_refs.py  inspect_app_state.py  install-hooks.py  migrate_backends.py  migrate_backends_v2.py  migrate_specific_backends.py  migrate_tests_backends.py  pre-commit-hook.py  pre_commit_api_key_check.py  rename_imports.py  test_cline_with_gemini_batch.py  test_zai_direct.py  zai_e2e_smoke.py
src/: agents.py  anthropic_converters.py  anthropic_models.py  anthropic_router.py  anthropic_server.py  command_config.py  command_parser.py  command_prefix.py  command_processor.py  command_utils.py  commands.py  constants.py  gemini_cli.py  gemini_converters.py  gemini_models.py  llm_accounting_utils.py  main.py  models.py  performance_tracker.py  proxy_logic.py  proxy_logic_deprecated.py  rate_limit.py  request_middleware.py  response_middleware.py  security.py  session.py  session_manager.py  sitecustomize.py
tests/: README.md  __init__.py  benchmark_loop_detection.py  conftest.py  debug_session_test.py  example_usage.py  integration_demo.py  k_asyncio_plugin.py  test_backend_factory.py  test_enforcement_demo.py  test_helpers.py  test_meta_test_suite_protection.py  test_openrouter_backend.py  test_project_root_cleanliness.py  test_proxy_logic.py  test_registry.py  test_top_p_fix.py  testing_framework.py
tools/: analyze_module_dependencies.py  architectural_linter.py  architectural_linter_enhanced.py  ci_guard_legacy_bridge.py  clean_imports.py  deprecate_legacy_endpoints.py  detect_dead_code.py  find_legacy_code.py  fix_command_indentation.py  identify_deprecated_methods.py  install-hooks.py  pre-commit-hook.py  pre_commit_api_key_check.py  trace_imports.py  update_config_imports.py  update_imports.py
watchdog/: __init__.py  events.py
(+1286 files in other folders)
